fix -- apply `z-index to image only, not to section

--- a/assets/scss/layout/_sections.scss
+++ b/assets/scss/layout/_sections.scss
@@ -45,14 +45,11 @@
   min-height: 0;
   padding-bottom: 1rem;
   margin-bottom: -1rem;
+  position: static;
 
   @include mq-min($bp-md) {
     margin-top: $section-spacing-unit * 1.5;
     margin-bottom: $section-spacing-unit * 1.5;
-  }
-
-  @include mq-min($bp-xl) {
-    z-index: 900;
   }
 }
 
@@ -131,6 +128,11 @@
 
   @include mq-max($bp-md) {
     margin-bottom: $base-spacing-unit*2;
+  }
+
+  @include mq-min($bp-xl) {
+    position: relative;
+    z-index: 900;
   }
 
   &.is-out {
